--- a/public/css/itempage.css
+++ b/public/css/itempage.css
@@ -5,45 +5,43 @@
   /*общие настройки сетки*/
 .grid {
     padding-top:50px;
-    padding-left: 245px;
-    /*рисуем зелёные рамки
-    border: 5px solid #ffffff;*/
+    padding-left: 190px;
+    /*рисуем зелёные рамки*/
+    border: 5px solid #ffffff;
     /*подключаем сетку*/
     display: grid;
     /*формируем по 4 одинаковых строки и столбца*/
-    grid-template-columns: repeat(4, 250px);
-    grid-template-rows: repeat(3, 150px);
+    grid-template-columns: repeat(4, 260px);
+    grid-template-rows: repeat(4, 150px);
 } 
 
   /*внешний вид ячеек*/
 .grid > * {
-    /*фоновый цвет*/
-    background-color: #ffffff;
+    /*фоновый цвет
+    background-color: #0083d4;*/
+    background: linear-gradient(rgba(35, 41, 214, 0.8), rgba(130, 35, 177, 0.4));
     /*скругление углов*/
-    border-radius: 0px;
+    border-radius: 10px;
     /*расстояние от одной границы ячейки до другой*/
-    margin: 1px;
+    margin: 10px;
 }
 
 .image {
-    grid-column: span 3;
-    grid-row: span 3;
+    grid-column: span 2;
+    grid-row: span 4;
     /*object-fit: cover*/
     /*align-items: center;*/
+    
 }
 
 .image-fit{
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    /*width: 400px;
-    height: 400px;*/
-    max-width:100%;
-    max-height:100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .imdiz-product__submit{
-    background-color: #0027d4;
+    background: linear-gradient(rgba(0, 7, 198, 0.8), rgba(0, 7, 205, 0.4));
     border: 1px solid #0027d4;
     width: 168px;
     height: 41px;
@@ -71,7 +69,7 @@
 }
 
 table {
-    padding-top: 55px;
+    padding-top: 5px;
     /*border: 1px solid grey;*/
 }
  
@@ -80,6 +78,17 @@ table {
 }
  /* задаст фиксированную ширину для таблицы */
  table {
-    width: 380px;
+    width: 350px;
 }
 
+.itemnameset{
+    text-align: center;
+}
+
+.itemset{
+    padding-top: 55px;
+}
+
+.invisibleblock{
+    visibility: hidden;
+}
