--- a/public/css/stylecatalog.css
+++ b/public/css/stylecatalog.css
@@ -3,8 +3,9 @@
     margin-right: 100px;
 }*/
 img {
-    width: 125px;
-    height: 130px;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
 }
 
 /*.imdiz-product__discount{
