--- a/views/catalog.hbs
+++ b/views/catalog.hbs
@@ -11,7 +11,9 @@
         {{> navigationbar}}
     </header>
     <div class="container products__container">
+        {{> emptyitem item}}
         <ul class="imdiz-products_row">
+            
             {{#each items}}
                 {{> item item=this}} 
             {{/each}}
