--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -5,7 +5,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 	min-height:100vh;
-	font-family: 'Noto Sans', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 .box{
