--- a/views/partials/item.hbs
+++ b/views/partials/item.hbs
@@ -2,7 +2,7 @@
     <div class="imdiz-product__inner">                
         <!--!<div class="imdiz-product__image-wrap">-->
             <a href="/" class="imdiz-product__img-link">
-                <img src="https://avatars.mds.yandex.net/get-zen_gallery/5279533/pub_60f4423acf9db26ddaabae2e_60f442b9a7eab75c27faefed/scale_1200" alt="Изображение продукта">
+                <img src={{item.itemimagepath}} alt="Изображение продукта">
             </a>                    
         <!--</div>-->
         <div class="imdiz-product__info">
