--- a/views/partials/iteminfotable.hbs
+++ b/views/partials/iteminfotable.hbs
@@ -1,6 +1,6 @@
 <div class="grid">
     <!-- и создаём 16 вложенных элементов -->
-    <div class="image"><img class ="image-fit" src="https://i.gzn.jp/img/2020/02/09/beastars-wf2020w/IMG_0624.jpg"> </div>
+    <div class="image"><img class ="image-fit" src={{item.itemimagepath}}> </div>
     <div class="itemnameset">
         <div class="itemset">{{item.itemname}}</div>
     </div>
