--- a/views/partials/rentableitem.hbs
+++ b/views/partials/rentableitem.hbs
@@ -2,7 +2,7 @@
     <div class="imdiz-product__inner">                
         <!--!<div class="imdiz-product__image-wrap">-->
             <a href="/" class="imdiz-product__img-link">
-                <img src="https://slovnet.ru/wp-content/uploads/2018/08/4-45.jpg" alt="Изображение продукта">
+                <img src="{{item.itemimagepath}}" alt="Изображение продукта">
             </a>                    
         <!--</div>-->
         <div class="imdiz-product__info">
