--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -71,6 +71,14 @@ a {
     text-decoration: none;
 }
 
+.teaxtarea-element{
+	border: 0px;
+    width:100%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    color: black;
+	resize: none;
+}
 
 
 
