--- a/views/partials/emptyitem.hbs
+++ b/views/partials/emptyitem.hbs
@@ -1,5 +1,5 @@
 <li class="imdiz-product">
     <div class="imdiz-product__inner">            
-        <a href="/" class="additem-link">Добавить товар</a>                    
+        <a href="/items/create" class="additem-link">Добавить товар</a>                    
     </div>
 </li>
