--- a/views/partials/iteminfotable.hbs
+++ b/views/partials/iteminfotable.hbs
@@ -26,6 +26,7 @@
             <p><button type="submit" class="imdiz-product__submit">{{btnname}}</button></p>
         </form>
     </div>
+     <a href="/items/update/{{item.itemID}}"><button>Редактировать запись</button></a>
 </div>
 <!--<div class="itemdescription">
     <p class="outline">{{item.itemdescription}}</p>
