--- a/views/catalog/createitem.hbs
+++ b/views/catalog/createitem.hbs
@@ -92,6 +92,7 @@
                     <button id="save-btn" type="button" class="btn">Создать</button>
             </form>	
         </div>
+        <a href="/items/parameters"><button>Редактировать параметры</button></a>
 	</body>
 </html>
 <script>
