--- a/views/catalog/rent.hbs
+++ b/views/catalog/rent.hbs
@@ -13,6 +13,7 @@
         </header>
         <div class="container products__container">
             <ul class="imdiz-products_row">
+                {{> emptyitem}}
                 {{#each items}}
                     {{> rentableitem item=this}} 
                 {{/each}}
