--- a/views/login/signin.hbs
+++ b/views/login/signin.hbs
@@ -20,3 +20,25 @@
         </form>	
     </div>
 </html>
+<script>
+     document.getElementById('auth-btn').onclick = async function() {
+        var data={
+            login: document.getElementById('login').value,
+            password: document.getElementById('password').value
+        }
+        console.log(data);
+        if(!data.login || /\s/g.test(data.login) || data.login.lenght> 20){alert("Некорректный логин");return;}
+        if(!data.password || /\s/g.test(data.password) || data.password.lenght> 20){alert("Некорректный пароль");return;}
+
+        const response = await fetch('/signin   ', {
+            method: 'post',
+            body: JSON.stringify(data),
+            headers: {'Content-Type': 'application/json'}
+        });
+        if(response.status == 400){alert("Проверьте введённые данные");return;}
+        alert("Авторизация прошла успешно");
+        const res = await response.json();
+        localStorage.setItem('token',res.token);
+        location.assign("/");
+     }
+</script>
