--- a/views/lk/lk.hbs
+++ b/views/lk/lk.hbs
@@ -20,7 +20,7 @@
 			</div>
 			<div>
 				<button class="lkbutton" type="button" name="button">
-					<a class="link" href="/privatedata/{{user.userID}}">
+					<a class="link" href="/user">
 						<img class="lklink" src="../../image/svg/user.svg" alt="" />
 					</a>
 					<p>Личные данные</p>
