--- a/views/partials/navigationbar.hbs
+++ b/views/partials/navigationbar.hbs
@@ -6,8 +6,9 @@
 					<li><a class="link" href="/rent">Аренда</a></li>
 					<li><a class="link popup" title="Возникли вопросы? Свяжитесь с нами! 8-937-6**-**-**">Поддержка</a></li>
 					<li><a class="link" href="/lk">Личный кабинет</a></li>
-					<li><a class="link" href="/shopcart">Корзина</a></li>
+					{{#isEquals token.role "0"}}<li><a class="link" href="/shopcart">Корзина</a></li>{{/isEquals}}
 					<li><a class="link" href="/aboutus">О нас</a></li>
+					{{#isGreater token.role "1"}}<li><a class="link" href="/workers">Работники</a></li>{{/isGreater}}
 				</ul>
 			</div>
 		</div>
