--- a/views/partials/rentableitem.hbs
+++ b/views/partials/rentableitem.hbs
@@ -18,7 +18,7 @@
         </div>
         <form class="imdiz-product__buy-form">
             <input type="hidden">
-            <button type="submit" class="imdiz-product__submit">Арендовать</button>
+            <button type="submit" id="rent-btn" class="imdiz-product__submit" value="{{item.itemID}}">Арендовать</button>
         </form>
     </div>
 </li>
