--- a/public/css/itempage.css
+++ b/public/css/itempage.css
@@ -92,3 +92,19 @@ table {
 .invisibleblock{
     visibility: hidden;
 }
+
+.upbtn{
+    color:rgb(255, 255, 255);
+	background:  rgba(0, 7, 205, 0.4);
+	outline: none;
+    border: 0;
+    color: rgb(255, 255, 255);
+	padding:10px 20px;
+	text-transform:uppercase;
+    margin-top: 3%;
+    margin-bottom: 1%;
+    margin-left: 72%;
+	border-radius:2px;
+	cursor:pointer;
+	position:relative;
+}
