--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Ubuntu', sans-serif;
+	min-height: 100vh;
 }
 
 .image-container {
@@ -16,6 +17,7 @@ body {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
+	z-index: 10;
 } 
 
 .headernotmain {
@@ -26,6 +28,7 @@ body {
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
+	z-index: 10;
 }
 
 /*Style for navigation*/
