--- a/views/partials/iteminfotable.hbs
+++ b/views/partials/iteminfotable.hbs
@@ -26,8 +26,8 @@
             <p><button type="submit" class="imdiz-product__submit">{{btnname}}</button></p>
         </form>
     </div>
-     <a href="/items/update/{{item.itemID}}"><button>Редактировать запись</button></a>
 </div>
 <!--<div class="itemdescription">
     <p class="outline">{{item.itemdescription}}</p>
 </div>-->
+<a href="/items/update/{{item.itemID}}"><button class="upbtn">Редактировать запись</button></a>
