--- a/views/catalog/catalog.hbs
+++ b/views/catalog/catalog.hbs
@@ -22,5 +22,14 @@
 </html>
 
 <script>
-    
+    var btn = document.getElementById("order-btn");
+    btn.onclick = async function(){
+        var id = btn.value;
+        var data ={ID: id};
+        const response = await fetch('/catalog/addtocart', {
+            method: 'post',
+            body: JSON.stringify(data),
+            headers: {'Content-Type': 'application/json'}
+        });
+    }
 </script>
