--- a/views/partials/worker.hbs
+++ b/views/partials/worker.hbs
@@ -1,8 +1,13 @@
+<a href="/workers/worker/{{worker.workerID}}">
 <li class="imdiz-product">
     <div class="imdiz-product__inner">                
         <div class="imdiz-product__info">
-            <span class="imdiz-product__name">{{worker.workername}}</span>
-            <span class="imdiz-product__name">{{worker.workermidname}}</span>		
+            <p class="imdiz-product__name">{{worker.workersurname}}</p>
+            <!--<span class="imdiz-product__name">{{worker.workername}}</span>-->
+            <p class="imdiz-product__name">{{worker.workername}}</p>
+            <p class="imdiz-product__name">{{worker.workermidname}}</p>
+            <p class="imdiz-product__name">{{worker.workeremail}}</p>		
         </div>
     </div>
 </li>
+</a>
