--- a/views/lk/lk.hbs
+++ b/views/lk/lk.hbs
@@ -28,7 +28,7 @@
 			</div>
 			<div>
 				<button class="lkbutton" type="button" name="button">
-					<a class="link" href="/shopcart">
+					<a class="link" href="/shopcart/order">
 						<img class="lklink" src="../../image/svg/cart.svg" alt="" />
 					</a>
 					<p>Корзина</p>
@@ -36,7 +36,7 @@
 			</div>
 			<div>
 				<button class="lkbutton" type="button" name="button">
-					<a class="link" href="#">
+					<a class="link" href="/shopcart/contract">
 						<img class="lklink" src="../../image/svg/rent.svg" alt="" />
 					</a>
 					<p>Аренда</p>
