--- a/views/partials/iteminshopcart.hbs
+++ b/views/partials/iteminshopcart.hbs
@@ -1,6 +1,6 @@
 <div class="iteminshopcart">
     <div class="buttons">
-        <button class="deletebtn" type="button" name="button">
+        <button class="deletebtn" value="{{item.itemID}}" type="button" name="button">
             <img class="deleteimg" src="../../image/svg/delete.svg" alt="" />
         </button>
     </div>
