--- a/views/catalog/catalog.hbs
+++ b/views/catalog/catalog.hbs
@@ -8,13 +8,13 @@
 </head>
 <body>	
     <header class="headernotmain">
-        {{> navigationbar}}
+        {{> navigationbar token=token}}
     </header>
     <div class="container products__container">
         <ul class="imdiz-products_row">
             {{> emptyitem}}
             {{#each items}}
-                {{> item item=this}} 
+                {{> item item=this token=../token}} 
             {{/each}}
         </ul>
     </div>
