--- a/views/catalog/createitem.hbs
+++ b/views/catalog/createitem.hbs
@@ -9,7 +9,7 @@
 </head>
 	<body>	
         <header class="headernotmain">
-        {{> navigationbar}}
+        {{> navigationbar token=token}}
         </header>
 		<div class="box" style="margin-top:100px;">
             <input hidden id="id" value="{{item.itemID}}">
