--- a/views/lk/aboutus.hbs
+++ b/views/lk/aboutus.hbs
@@ -8,7 +8,7 @@
     <body>	
         <div class="us-image"> 
 			<header class="headermain">		
-				{{> navigationbar}}
+				{{> navigationbar token=token}}
 			
 			<div class="descrip">
 				<p>А что писать-то? Ну, привет. Пока.</p>
