--- a/views/catalog/parameters.hbs
+++ b/views/catalog/parameters.hbs
@@ -9,7 +9,7 @@
 </head>
 	<body>	
         <header class="headernotmain">
-        {{> navigationbar}}
+        {{> navigationbar token=token}}
         </header>        
         <button class="upbtn" id="update-button">Сохранить</button>
         <div class="grid">
@@ -123,7 +123,8 @@
         body: JSON.stringify(data),
         headers: {'Content-Type': 'application/json'}
     });
-    
+    if(response.status == 400){alert("Ошибка сервера");return;}
+    else location.reload();
     }
 
 
