--- a/views/catalog/rent.hbs
+++ b/views/catalog/rent.hbs
@@ -8,13 +8,13 @@
     </head>
     <body>	
         <header class="headernotmain">
-            {{> navigationbar}}
+            {{> navigationbar token=token}}
         </header>
         <div class="container products__container">
             <ul class="imdiz-products_row">
                 {{> emptyitem}}
                 {{#each items}}
-                    {{> rentableitem item=this}} 
+                    {{> rentableitem item=this token=../token}} 
                 {{/each}}
             </ul>
         </div>
