--- a/views/lk/lk.hbs
+++ b/views/lk/lk.hbs
@@ -7,7 +7,7 @@
 </head>
 	<body>	
 		<header class="headernotmain">		
-			{{> navigationbar}}
+			{{> navigationbar token=token}}
 		</header>
 		<div class="grid">
 			<div>
