--- a/views/lk/main.hbs
+++ b/views/lk/main.hbs
@@ -8,7 +8,7 @@
 	<body>	
 		<div class="image-container"> 
 			<header class="headermain">		
-				{{> navigationbar}}
+				{{> navigationbar token=token}}
 			
 			<div class="description">
 				<h1>Аниме атрибутика</h1>
