--- a/views/workers/worker.hbs
+++ b/views/workers/worker.hbs
@@ -7,7 +7,7 @@
 </head>
 	<body>	
 		<header class="headernotmain">		
-			{{> navigationbar}}
+			{{> navigationbar token=token}}
 		</header>
 		<div class="data-container">
 			<div class="grid">
