--- a/views/partials/item.hbs
+++ b/views/partials/item.hbs
@@ -9,10 +9,10 @@
             <a href="/itempage/{{item.itemID}}" class="imdiz-product__name">{{item.itemname}}</a>	
             <p class="imdiz-product__av">
 						<i class="fa fa-check" aria-hidden="true"></i>
-						<span>{{item.itemstatusname}}</span>
+						<span>Статус: {{item.itemstatusname}}</span>
 					</p>       
             <p class="imdiz-product__price">
-                <span class="imdiz-product__cost">{{item.itemprice}}</span>
+                <span class="imdiz-product__cost">Цена: {{item.itemprice}}</span>
             </p>
         </div>
         <form class="imdiz-product__buy-form">
