--- a/views/partials/iteminshopcart.hbs
+++ b/views/partials/iteminshopcart.hbs
@@ -4,11 +4,12 @@
             <img class="deleteimg" src="../../image/svg/delete.svg" alt="" />
         </button>
     </div>
+    <div class="item-img" href="{{item.itemimagepath}}"></div>
     <div class="descrforshopcart">
         <span>{{item.itemname}}</span>
         <span>{{item.itemconditionname}}</span>
     </div>
-    <div class="count">
+    <!--<div class="count">
         <button class="plusbtn" type="button" name="button">
         <img src="../../image/svg/plus.svg" alt="" />
         </button>
@@ -16,7 +17,7 @@
         <button class="minusbtn" type="button" name="button">
         <img src="../../image/svg/minus.svg" alt="" />
         </button>
-    </div>
+    </div>-->
     <div class="price">{{item.itemprice}}</div>
 </div>
 
